fixing image clipping in conditions

--- a/src/scss/includes/conditions.scss
+++ b/src/scss/includes/conditions.scss
@@ -97,12 +97,11 @@
       @media (max-width: 992px) {
          flex: 0 0 calc(50% - rem(15));
          padding-bottom: 0;
+         align-self: start;
       }
       @media (max-width: 767px) {
          flex: 0 0 100%;
-      }
-      @media (max-width: 767px) {
-         //  align-self: start;
+         align-self: center;
       }
       img {
          position: absolute;
